--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     background-color: aliceblue;
     display: flex;
     justify-content: center;
+    border : 2px solid yellow;
+    border-radius: 25px;
 }
 
 p {
