--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 body {
     width: 300px;
-    background-color: aliceblue;
+    background-color: #131516;
     display: flex;
     justify-content: center;
     border : 2px solid yellow;
     border-radius: 25px;
 }
 
-p {
-    display: inner-flex;
+h5 {
     margin: auto 10px;
     font-size: 22px;
-    color: blue;
+    color: white;
     border-radius: 6px;
-    //border: 1px solid lightblue;
     padding: 16px;
 }
+
